added main page

--- a/pages/company.html
+++ b/pages/company.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    This will become the schedule page
+    This will become the company page
 </body>
 </html>
