--- a/pages/staff.html
+++ b/pages/staff.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    This will become the schedule page
+    This will become the staff page
 </body>
 </html>
